@@ -9,7 +9,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.IntStream;
-
 import ru.nsu.bondar.Subject.SubjectType;
 
 /**
@@ -45,7 +44,7 @@ public class GradeBook {
      * Loads grade book data from an input stream from CSV file.
      * File should contain student info in first 4 lines and subjects data after
      * header.
-     * 
+     *
      * @param inputStream InputStream from a CSV file
      * @throws RuntimeException if file is not found or parsing fails
      */
@@ -103,7 +102,8 @@ public class GradeBook {
                 Subject subject = new Subject(name, type);
                 subject.setGrade(grade);
 
-                if (!seenSubjects.contains(name) && type == SubjectType.EXAM || type == SubjectType.DIFF_CREDIT) {
+                if (!seenSubjects.contains(name) && type == SubjectType.EXAM
+                        || type == SubjectType.DIFF_CREDIT) {
                     subject.setFinal(true);
                     seenSubjects.add(name);
                 }
@@ -118,7 +118,7 @@ public class GradeBook {
 
     /**
      * Retrieves final subjects across all semesters.
-     * 
+     *
      * @return List of final subjects
      */
     public List<Subject> getFinalSubjects() {
@@ -130,13 +130,13 @@ public class GradeBook {
 
     /**
      * Calculates the average grade for subjects that affect final grades.
-     * 
+     *
      * @return Average grade or null if no graded subjects exist
      */
     public Double calculateAverageGrade() {
         List<Subject> gradedSubjects = semesters.stream()
                 .flatMap(semester -> semester.getSubjects().stream())
-                .filter(subject -> subject.getType().affectsFinalGrades && subject.getGrade() != null)
+                .filter(subj -> subj.getType().affectsFinalGrades && subj.getGrade() != null)
                 .toList();
 
         if (gradedSubjects.isEmpty()) {
@@ -154,11 +154,12 @@ public class GradeBook {
      * Transfer is valid, if this conditions for last 2 semesters are true:
      * all exams subjects grade > 3, all differential credit subjects grade > 2, all
      * credit subjects are passed.
-     * 
+     *
      * @return true if possible, otherwise false
      */
     public boolean canTransferToBudget() {
-        List<Semester> lastTwoSem = semesters.subList(student.getCurrentSemester() - 3, student.getCurrentSemester() - 1);
+        List<Semester> lastTwoSem = semesters.subList(student.getCurrentSemester() - 3,
+                student.getCurrentSemester() - 1);
 
         boolean examGrade = lastTwoSem.stream()
                 .flatMap(sem -> sem.getSubjectsByType(SubjectType.EXAM).stream())
@@ -183,14 +184,16 @@ public class GradeBook {
      * It is possible to get Red Diploma, if this conditions are true: 75% of final
      * grades are "5" and there is no "3" final grades, all credits are passed,
      * qualification work grade is "5".
-     * 
+     * <p>
      * Calculation takes care about current state of GradeBook, so it precalculates
      * possibility of getting Red Diploma, even if current semester is not final.
      * 
      * @return true if possible, otherwise false
      */
     public boolean canGetRedDiploma() {
-        List<Subject> finals = getFinalSubjects().stream().filter(subj -> subj.getGrade() != null).toList();
+        List<Subject> finals = getFinalSubjects().stream().
+                filter(subj -> subj.getGrade() != null).
+                toList();
         long totalGrades = finals.size();
 
         long goodGrades = finals.stream()
@@ -207,8 +210,8 @@ public class GradeBook {
                 .filter(subj -> subj.getGrade() != null)
                 .noneMatch(subj -> subj.getGrade() == 0);
 
-        Integer qualWorkGrade = semesters.get(semesters.size() - 1).getSubjectsByType(SubjectType.QUALIFICATION_WORK)
-                .get(0).getGrade();
+        Integer qualWorkGrade = semesters.getLast().
+                getSubjectsByType(SubjectType.QUALIFICATION_WORK).getFirst().getGrade();
         boolean qualWorkExcellent = qualWorkGrade == null || qualWorkGrade == 5;
 
         return goodPercentage && noUnsatisfactory && allCreditPass && qualWorkExcellent;
@@ -217,7 +220,7 @@ public class GradeBook {
     /**
      * Calculetes possibility of getting increased scolarship.
      * Increased scolarship is paid when average grade >= 4.5.
-     * 
+     *
      * @return true, if possible, otherwise false
      */
     public boolean canReceiveIncreasedScholarship() {
